# snapchat-memory-loader

./: .gitignore  README.md  configuration.json  pyproject.toml
.github/: FUNDING.yml
src/snapchat_memory_loader/: main.py
